--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
+boto3==1.14.7
+botocore==1.17.7
 click==7.1.2
 dnspython==1.16.0
+docutils==0.15.2
 Flask==1.1.2
 Flask-PyMongo==2.3.0
 googlemaps==4.4.1
 itsdangerous==1.1.0
+jmespath==0.10.0
 pymongo==3.10.1
+s3transfer==0.3.3
 Werkzeug==1.0.1
