--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,12 @@ dnspython==1.16.0
 docutils==0.15.2
 Flask==1.1.2
 Flask-PyMongo==2.3.0
+Flask-WTF==0.14.3
 googlemaps==4.4.1
 itsdangerous==1.1.0
 jmespath==0.10.0
+passlib==1.7.2
 pymongo==3.10.1
 s3transfer==0.3.3
 Werkzeug==1.0.1
+WTForms==2.3.1
